<resources>
    <string name="app_name">MAJ</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="main_trolley">Main Trolley</string>
    <string name="main_cart">Main Cart</string>
    <string name="menu_cart">Menu Cart</string>
    <string name="product_cart_item">Product Cart Item</string>
    <string name="coke_mismo">Coke mismo</string>
    <string name="coke_mismo_cost">135.00</string>
    <string name="delete_cart_item">Delete Cart Item</string>
    <string name="total_amount">Total Amount:</string>
    <string name="result_total_amount">P 1,000.00</string>
    <string name="check_out">Check out</string>
    <string name="firstname_lastname">FirstName LastName</string>

    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_orders">Orders</string>
    <string name="nav_item_points">Points</string>

    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="consumer_goods_trading">Consumer Goods Trading</string>
    <string name="store_name">Store Name  (optional)</string>
    <string name="full_name">Full Name ( Last, First, M.I )</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="hint_marites_sari_sari_store">Marites Sari-Sari Store</string>
    <string name="hint_dela_cruz_marites_c">Dela Cruz, Marites, C.</string>
    <string name="hint_customer_mobile">0910-1234-637</string>
    <string name="optional">( optional )</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="coming_soon">Coming soon</string>
    <string name="points">Loyalty Points</string>
    <string name="product_image">Product Image</string>
    <string name="btn_add_to_cart">Add to Cart</string>
    <string name="current_address">Current Address</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_decrease">Decrease Quantity</string>
    <string name="quantity_increase">Increase Quantity</string>
    <string name="exit">Exit</string>
    <!--  Messages  -->
    <string name="txt_empty_cart">There are no items in this cart.</string>
    <string name="txt_empty_active_order">There are no orders placed yet.</string>
    <string name="txt_continue_shopping">Continue Shopping</string>
    <string name="txt_shipping_fee">Shipping Fee</string>
    <string name="txt_total">Total:</string>
    <string name="txt_item_s">Item(s),</string>
    <string name="txt_place_order">Place Order</string>
    <string name="txt_order_summary">Order Summary</string>
    <string name="txt_total_payment">Total Payment</string>
    <string name="txt_city_municipality">City/Municipality</string>
    <string name="txt_barangay">Barangay</string>
    <string name="txt_house_number_building_and_street_name">House Number, Building and Street Name</string>
    <string name="txt_other_notes">Other Notes (landmarks, etc.)</string>
    <string name="txt_delivery_address">Delivery Address</string>
    <string name="quantity_with_colon">Quantity:</string>
    <string name="unit_price_with_colon">Unit Price:</string>
    <string name="txt_orders_active">Active</string>
    <string name="txt_orders_completed">Completed</string>
    <string name="txt_set_desired_date">Set Desired Delivery/Pick-up Date</string>
    <string name="txt_set_network_unavailable_tooltip">You can still place an order via SMS.</string>
    <string name="txt_download_additional_files">Please connect to the internet to download additional files.</string>
    <string name="txt_splash_version">version %1$s</string>
    <string name="txt_order_count">You ordered %1$s item(s)</string>
    <string name="notify_success_added_to_cart">Item successfully added to cart.</string>

    <!--  Place order confirmation dialog -->
    <string name="txt_dialog_place_order_title">Place Order</string>
    <string name="txt_dialog_place_order_body">Are you sure you want to place the order?</string>
    <string name="txt_dialog_place_order_positive">Yes</string>
    <string name="txt_dialog_place_order_negative">No</string>

    <!--  Confirm Profile setup dialog -->
    <string name="txt_dialog_set_profile_title">Setup Profile</string>
    <string name="txt_dialog_set_profile_body">Please setup your profile.</string>
    <string name="txt_dialog_set_profile_positive">Go to Profile</string>
    <string name="txt_dialog_set_profile_negative">Cancel</string>

    <!--  Remove Cart Content dialog -->
    <string name="txt_dialog_remove_cart_title">Remove from cart</string>
    <string name="txt_dialog_remove_cart_body">Are you sure you want to remove the item?</string>
    <string name="txt_dialog_remove">Remove</string>
    <string name="txt_dialog_cancel">Cancel</string>

    <!--    Placing Order-->
    <string name="new_order">New Order</string>
    <string name="txt_customer_info">Customer Details</string>
    <string name="txt_order_details">Order Details</string>
    <string name="sms_order">MAJ pa-order.\n\n%1$s\n%2$s on: %3$s\n\n— %4$s (%5$s)\n%6$s\n\nSalamat!</string>
    <string name="sms_order_detail">%1$s (qty) - %2$s</string>
    <string name="btn_view_orders">View Orders</string>
    <string name="btn_reorder">Reorder</string>
    <string name="txt_select_delivery_option">Select Delivery Option (required)</string>
    <string name="txt_your_desired_delivery_date_is">Your desired delivery date is:</string>
    <string name="deliver_to_address">Deliver to address</string>
    <string name="pick_up_in_store">Pick-up in store</string>
    <string name="unit_price">Unit Price:</string>
    <string name="price">Price</string>
    <string name="low_to_high">Low to high</string>
    <string name="high_to_low">High to low</string>
    <string name="you_re_not_connected_to_the_internet">You\'re not connected to the internet.</string>
    <string name="view_more_product">View more product</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="move_to_completed">Move to Completed</string>

    <array name="cities">
        <item>Lipa City</item>
    </array>

    <array name="barangays">
        <item>Adya</item>
        <item>Anilao</item>
        <item>Anilao-Labac</item>
        <item>Antipolo Del Norte</item>
        <item>Antipolo Del Sur</item>
        <item>Bagong Pook</item>
        <item>San Sebastian (Balagbag)</item>
        <item>Balintawak</item>
        <item>Banaybanay</item>
        <item>Bolbok</item>
        <item>Bugtong na Pulo</item>
        <item>Bulacnin</item>
        <item>Bulaklakan</item>
        <item>Calamias</item>
        <item>Cumba</item>
        <item>Dagatan</item>
        <item>Duhatan</item>
        <item>Halang</item>
        <item>Inosloban</item>
        <item>Kayumanggi</item>
        <item>Latag</item>
        <item>Lodlod</item>
        <item>Lumbang</item>
        <item>Mabini</item>
        <item>Malagonlong</item>
        <item>Malitlit</item>
        <item>Marauoy</item>
        <item>Mataas Na Lupa</item>
        <item>Munting Pulo</item>
        <item>Pagolingin Bata</item>
        <item>Pagolingin East</item>
        <item>Pagolingin West</item>
        <item>Pangao</item>
        <item>Pinagkawitan</item>
        <item>Pinagtongulan</item>
        <item>Plaridel</item>
        <item>Poblacion Barangay 1</item>
        <item>Poblacion Barangay 10</item>
        <item>Poblacion Barangay 11</item>
        <item>Poblacion Barangay 2</item>
        <item>Poblacion Barangay 3</item>
        <item>Poblacion Barangay 4</item>
        <item>Poblacion Barangay 5</item>
        <item>Poblacion Barangay 6</item>
        <item>Poblacion Barangay 7</item>
        <item>Poblacion Barangay 8</item>
        <item>Poblacion Barangay 9</item>
        <item>Pusil</item>
        <item>Quezon</item>
        <item>Rizal</item>
        <item>Sabang</item>
        <item>Sampaguita</item>
        <item>San Benito</item>
        <item>San Carlos</item>
        <item>San Celestino</item>
        <item>San Francisco</item>
        <item>San Guillermo</item>
        <item>San Jose</item>
        <item>San Lucas</item>
        <item>San Salvador</item>
        <item>Sapac</item>
        <item>Sico</item>
        <item>Santo Niño</item>
        <item>Santo Toribio</item>
        <item>Talisay</item>
        <item>Tambo</item>
        <item>Tangob</item>
        <item>Tanguay</item>
        <item>Tibig</item>
        <item>Tipacan</item>
        <item>Poblacion Barangay 9-A</item>
        <item>Barangay 12 (Pob.)</item>
    </array>
</resources>