<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemFragmentHome"
        android:title="@string/home_page"
        android:icon="@drawable/ic_homepage"/>

    <item
        android:id="@+id/itemFragmentLoyaltyPoints"
        android:title="@string/points"
        android:icon="@drawable/ic_nav_points"/>

    <item
        android:id="@+id/itemFragmentOrders"
        android:title="@string/orders"
        android:icon="@drawable/ic_nav_orders"/>

    <item
        android:id="@+id/itemActivityCart"
        android:title="@string/cart"
        android:icon="@drawable/ic_trolley"/>

    <item
        android:id="@+id/itemActivityProfile"
        android:title="@string/profile"
        android:icon="@drawable/ic_nav_profile"/>
</menu>