<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCartContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/product_cart_item"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_soft_drink" />

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/coke_mismo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toEndOf="@id/imgProduct"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtUnitCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coke_mismo_cost"
                app:layout_constraintStart_toStartOf="@id/txtProductName"
                app:layout_constraintTop_toBottomOf="@id/txtProductName"
                tools:layout_editor_absoluteX="78dp" />

            <!--    TODO: Counter button        -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuantity"
                android:layout_width="64dp"
                android:layout_height="40dp"
                android:layout_marginEnd="32dp"
                android:focusable="false"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtUnitCost" />

            <ImageView
                android:id="@+id/btnDeleteCartItem"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:contentDescription="@string/delete_cart_item"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/gray" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>