<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/cardDeliveryOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtDeliveryOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/txt_select_delivery_option"/>
            <RadioGroup
                android:id="@+id/rgDeliveryOption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDeliveryOption">
                <RadioButton
                    android:id="@+id/radioBtnDeliver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deliver_to_address"
                    />
                <RadioButton
                    android:id="@+id/radioBtnPickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_up_in_store"
                    />
            </RadioGroup>

            <ImageView
                android:id="@+id/imgEditCalendar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:paddingVertical="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgDeliveryOption"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/IconStyle"
                android:src="@drawable/ic_calendar_edit"/>

            <TextView
                android:id="@+id/txtSelectDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:layout_margin="4dp"
                app:layout_constraintStart_toEndOf="@id/imgEditCalendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgDeliveryOption"
                style="@style/TextSecondary"
                android:textStyle="bold"
                android:text="@string/txt_set_desired_date"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/txtLabelSelectedDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingVertical="4dp"
                android:layout_margin="4dp"
                app:layout_constraintStart_toEndOf="@id/imgEditCalendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgDeliveryOption"
                android:visibility="gone"
                android:text="@string/txt_your_desired_delivery_date_is"/>

            <TextView
                android:id="@+id/txtSelectedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:paddingStart="8dp"
                android:paddingBottom="4dp"
                app:layout_constraintStart_toEndOf="@id/imgEditCalendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLabelSelectedDate"
                style="@style/TextSecondary"
                android:textStyle="bold"
                tools:text=""/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
