<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.order.OrdersActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/frameSummary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include
                    android:id="@+id/layoutDeliveryInfo"
                    layout="@layout/layout_orders_delivery_info" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvOrderGroupContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_order_group_content"
                    tools:itemCount="3"/>

                <include
                    android:id="@+id/layoutSummaryFees"
                    layout="@layout/layout_checkout_summary_fees" />
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/frameSummary"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/txtTotalAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginBottom="4dp"
                android:text="@string/total_amount"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/txtResultTotalAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:textColor="@color/colorSecondaryVariant"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="@string/result_total_amount"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                style="@style/PrimaryButton"
                android:textSize="14sp"
                android:text="@string/btn_reorder"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMoveToCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PrimaryButton"
                android:textSize="14sp"
                android:layout_gravity="end|center_vertical"
                android:text="@string/move_to_completed"
                android:visibility="gone"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
