<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/frameAddToCartLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorOverlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSnackBar"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@color/white"
                android:layout_gravity="bottom">

                <ImageView
                    android:id="@+id/btnExit"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:contentDescription="@string/exit"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/gray" />

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/product_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_soft_drink" />

                <TextView
                    android:id="@+id/txtUnitCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="P 3,6580.00"
                    android:textColor="@color/colorSecondaryVariant"
                    android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@id/imgProduct"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtProductDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:maxLines="3"
                    android:text="Coke 1.5 L 12pcs. per pack"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgProduct"
                    app:layout_constraintTop_toBottomOf="@id/txtUnitCost" />

                <TextView
                    android:id="@+id/txtLabelQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="24dp"
                    android:paddingStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
                    android:text="@string/quantity"
                    android:textSize="20sp"
                    android:textColor="@color/rich_black"/>

                <FrameLayout
                    android:id="@+id/btnMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/bg_border_primary"
                    android:clickable="true"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
                    app:layout_constraintEnd_toStartOf="@id/txtQuantity"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_minus"
                        android:backgroundTint="@color/gray"
                        android:contentDescription="@string/quantity_decrease" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/txtQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/bg_border_primary"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
                    app:layout_constraintEnd_toStartOf="@id/btnAdd">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:paddingHorizontal="4dp"
                        android:text="0"
                        android:inputType="number"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"/>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_border_primary"
                    android:clickable="false"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_plus"
                        android:backgroundTint="@color/gray"
                        android:contentDescription="@string/quantity_increase" />
                </FrameLayout>

                <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_add_to_cart"
                    android:layout_marginHorizontal="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/bottomGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.70" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>